assets/css/style.scss
---
---

$font-family-sans-serif:  Lato, Arial, sans-serif;
$headings-font-family: Montserrat, Arial, sans-serif;
$font-size-base: 1rem;
$grid-gutter-width: 20px;
$headings-font-weight: 800;
$h1-font-size: 42pt;

$primary: #F15623;
$navbar-padding-x: 0;
$navbar-padding-y: 0;

$nav-pills-border-radius: 0;

$card-spacer-x: 1rem;

$carousel-control-opacity: 0.75;

$spacer: 0.5rem;

$figure-caption-color: #000;

$transition-team-row: cubic-bezier(0.86, 0, 0.07, 1);

$headings-margin-bottom: 1rem;

$navbar-bg: rgba(#f0f0f0, 0.95);

$carousel-indicator-width: 16px;
$carousel-indicator-height: 16px;
$carousel-indicator-spacer: 6px;
$carousel-control-width: auto;

@import "bootstrap/bootstrap";
@import "select2/core.scss";
@import "tether/tether.sass";
@import "leaflet/leaflet";

@import "fonts";

$footer-background: #e7e7e8;
$body-color: #231f20;

body {
  background-color: $footer-background;
  border-top: 70px solid $body-bg;
  @include media-breakpoint-up(md) {
    border-top-width: 105px;
  }
  @include media-breakpoint-down(xs) {
    font-size: 0.75rem;
  }


  & > #page {
    background-color: $body-bg;
    overflow: hidden;
  }
}
footer {
  background-color: $footer-background;
  &, & a, & a:hover {
    color: $body-color;
    text-decoration: none;
  }

  &>.container {
    padding-top: $spacer*4;
    padding-bottom: $spacer*4;
  }

  .our-values {
    .value-cell {
      // @extend .col-sm-4;
      @extend .col-4;
      @extend .col-md-2;
      margin-bottom: $spacer*4;
      img {
        max-width: 50%;
        display: block;
        margin: 0 auto;
      }
      p {
        margin: $spacer 0 0;
        @extend .small;
        font-size: 0.8em;
        text-align: center;
      }
    }
  }
  .copyright {
    margin: $spacer 0 0;
    @extend .small;
    address {
      margin-bottom: $spacer;
    }
    img {
      max-height: 20px;
    }
  }
}
.navbar-brand {
  display: block;
  float: right;

  &> img {
    height: 40px;
    display: inline-block;
  }
  span {
    font-size: 0.75rem;
    vertical-align: bottom;
    line-height: 1;
  }

  @include media-breakpoint-up(md) {
    padding: 33px 0 14px 0;
    float: none;
    &> img {
      height: 58px;
    }
  }
}

.navbar {
  border-bottom: 1px solid darken($navbar-bg, 6.5%);
  .navbar-nav {
    padding-bottom: 14px;
    .nav-item {
      padding: 0 6px;
      .nav-link {
        line-height: 1em;
        padding: 0 2px 2px;
        font-size: 0.75rem;
        border-bottom: 0px solid $primary;
        white-space: nowrap;
        margin-bottom: -2px;
      }
      &.active {
        .nav-link {
          font-weight: bold;
          border-bottom-width: 2px;
          margin-bottom: -4px;
        }
      }

      @include media-breakpoint-up(lg) {
        padding: 0 12px;

        .nav-link {
          padding: 0 4px 2px;
          font-size: 0.85rem;
        }
      }
    }
  }
  &.navbar-expand-md {
    .container {
      @include media-breakpoint-down(sm) {
        margin-top: 10px;
        margin-bottom: 10px;
        position: relative;
        .navbar-toggler {
          float: left;
        }
      }
      @include media-breakpoint-down(xs) {
        margin-left: 10px;
        margin-right: 10px;
      }
    }
  }
}
.bg-faded {
  background-color: #f3f3f4 !important;
}

.carousel-indicators {
  width: 60vw;
  max-width: 500px;
  li {
    border-radius: 50%;
  }
}

.profile-image {
  img {
    max-width: 100%;
  }
  margin-bottom: 1em;
}

figure.person-card {
  &[data-toggle] {
    cursor: pointer;
  }
  figcaption {
    color: #58595b;
    margin: 0.75rem 0;
    h3 {
      font-size: 1rem;
      margin: 0;
    }
  }
}

.service-cover {
  width: 125px;
}

#portfolio_page {
  .project-inner {
    padding: 1em;

    @include media-breakpoint-up(md) {
      min-height: calc(308px + 9rem);
    }
    @include media-breakpoint-up(lg) {
      min-height: calc(396px + 8rem);
      padding: 1em 2em;
    }
    @include media-breakpoint-up(xl) {
      min-height: calc(454px + 8rem);
      padding: 1em 3em;
    }

    .placeholder {
      padding-bottom: 100%;
    }
    .description-overlay {
      position: absolute;
      top: 0;
      left: 0;
      right: 0;
      bottom: 0;
      background: rgba(0,0,0, 0.5);
      color: white;
      padding: 2em;
      opacity: 0;
      transition: opacity 0.3s ease;
      p {
        font-size: 90%;
      }
      h4 {
        @include media-breakpoint-up(xl) {
          margin-top: 2rem;
        }
      }
    }
    &.force-description,
    &:hover {
      .description-overlay {
        opacity: 1;
      }
    }
    &.force-description {
      .description-overlay {
        p {
          transition: opacity 0.3s ease;
          opacity: 0
        }
      }
      &:hover {
        .description-overlay {
          p {
            opacity: 1
          }
        }
      }
    }

    .facets {
      @extend .small;
      text-align: left;
    }
    .facet {
      white-space: nowrap;
      padding-right: 0.25em;
      margin-bottom: 0;
      &:before {
        content: ' | ';
        padding-right: 0.25em;
      }
      &:last-child {
        padding-right: 0;
      }
      &:last-child:after {
        content: ' | ';
        padding-left: 0.25em;
      }

      &.disciplines {
        .discipline {
          &:after {
            content: ', ';
            padding-right: 0.2em;
          }
          &:last-child:after {
            content: '';
            padding-right: 0;
          }
        }
      }
    }
  }
}

#contact_page {
  .location {
    @extend .row;
    @extend .border-bottom;
    @extend .py-5;

    $header-icon-padding: 32px;

    h3 {
      background: transparent url(/assets/css/images/marker-icon-2x.png) no-repeat left top;
      background-size: 1.5rem;
      padding-left: $header-icon-padding;
      font-weight: 400;
    }
    address {
      display: block;
      margin: 0;
    }
    .office {
      @extend .col-md-8;
      @extend .align-self-start;
      padding-left: $header-icon-padding;
    }
    .contact {
      @extend .col-md-4;
      @extend .align-self-center;
      @include media-breakpoint-down(sm) {
        margin-top: 1rem;
        padding-left: $header-icon-padding;
      }
    }
  }
}

.company-features {
  h6 {
    font-weight: bold;
    text-align: center;
    margin: 0;

    @include media-breakpoint-down(sm) {
      position: absolute;
      bottom: 0;
      left: $grid-gutter-width / 2;
      right: $grid-gutter-width / 2;
      background: rgba(255,255,255, 0.5);
      text-shadow: 0 0 2px white;
      padding: 0.5em 0;
    }
  }
}


#map {
  height: 50vh;
  @include media-breakpoint-up(md) {
    height: 66vh;
  }
  margin-bottom: 2rem;
}

.homepage-block {
  position: relative;
  display: flex;
  align-items: center;
  justify-content: center;

  min-width: 100vw;
  min-height: 90vh;

  background-position: center;
  background-repeat: no-repeat;
  background-color: white;
  background-size: cover;
}

.homepage-inner-block {
  position: absolute;
  width: 70vw;
  height: 70vw;

  @include media-breakpoint-up(sm) {
    max-width: 500px;
    max-height: 500px;
  }
}
.homepage-image-block {
  background-position: center;
  background-repeat: no-repeat;
  background-color: transparent;
  background-size: contain;
}

.homepage-text-block {
  display: flex;
  flex-direction: column;
  justify-content: flex-end;

  color: white;
  background: rgba(#f05523, 0.7);
  padding: 5px;


  &>div,&>h1 {
    flex: 1 1 0;
  }

  h1 {
    line-height: 0.85em;
    margin: 0;
    flex: 0;
    a {
      color: white;
      text-decoration: none;
    }
  }
  div {
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
    p {
      margin: 0;
    }
  }
}

h1, h2, h3, h4, h5, h6 {
  div, span {
    font-weight: 300;
  }
}

h1 {
  @include media-breakpoint-down(sm) {
    font-size: $h1-font-size/2;
  }
}

#page {
  .section-wrapper {
    background-color: white;
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
    overflow: auto;

    .outer-container {
      background: $body-bg;
      color: white;
      margin: 25vh 0;

      > .container {
        padding-top: 10px;
        padding-bottom: 10px;
      }
      @include media-breakpoint-up(sm) {
        margin: 200px 0;
        > .container {
          padding-top: 100px;
          padding-bottom: 100px;
        }
      }

      &.primary {
        background: $primary;
      }
      &.white {
        color: $body-color;
      }

      &.dark {
        background: transparent;
        text-shadow: 0 0 3px black;
      }
    }
    &.no-background {
      .outer-container {
        margin: 0;
      }
    }
    &.tight-container {
      @include media-breakpoint-up(sm) {
        .container {
          padding: 0;
        }
      }
    }
  }
}


body#our_services_page {
  .section-wrapper {
    margin-bottom: 25px;
    &:nth-child(n+5) {
      .outer-container {
        margin: 25px 0;
        > .container {
          padding-top: 25px;
          padding-bottom: 25px;
        }
      }
    }
  }
  ul.lead {
    li {
      @extend .mb-3;
      a {
        @extend .text-body;
        @extend .text-decoration-none;
        padding-left: 0;
        transition: padding 0.3s ease;
        &:hover {
          padding-left: 0.5rem;
        }
      }
    }
  }

  .read-more-link {
    float: right;
    line-height: 16px;
    cursor: pointer;

    &:before {
      content: 'more';
      display: inline-block;
      background: url(/images/more-icon.png) no-repeat center right;
      background-size: 14px;
      padding-right: 18px;
    }
  }
}

.leaflet-container {
  .leaflet-marker-pane {
    img {
      // @TODO - this is crap. Maybe maybe a custom LeafletJS icon.
      width: 30px !important;
      height: 41px !important;
    }
  }
}

.team-modal {
  .bio {
    @include media-breakpoint-up(lg) {
      max-height: 345px;
      overflow-y: scroll;
    }
    @include media-breakpoint-up(xl) { max-height: 500px; }


    &::-webkit-scrollbar {
        -webkit-appearance: none;
        width: 7px;
    }

    &::-webkit-scrollbar-thumb {
        border-radius: 4px;
        background-color: rgba(0,0,0,.5);
        -webkit-box-shadow: 0 0 1px rgba(255,255,255,.5);
    }
  }
}
.services-modal {
  h4 {
    font-weight: 400;
  }
}

.news-card {
  @extend .col-md-8;
  @extend .shadow-lg;
  @extend .mb-5;
  padding: 1em;

  .avatar {
    width: 64px;
    height: 64px;
    background: $footer-background;
    float: left;
    margin-right: 1em;
    img {
      display: block;
      width: 100%;
      height: auto;
      margin-top: 25%;
    }
  }
  .card-title {
    a {
      color: $body-color;
    }
  }
}
#news_page {
  .homepage-block {
    min-height: auto;
    .homepage-inner-block {
      position: relative;
      margin: 5% 0;
      height: auto;
    }
  }
}

